[JENKINS-45333] Code cleanup